samples/_failures_safe/1761084539_28b750_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8509fd1.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_c8509fd1.c:161:14: error: ‘STATE’ undeclared (first use in this function)
  161 |         case STATE
      |              ^~~~~
./samples/SAFE/__tmp_c8509fd1.c:161:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c8509fd1.c:161:9: error: expected ‘:’ or ‘...’ at end of input
  161 |         case STATE
      |         ^~~~
./samples/SAFE/__tmp_c8509fd1.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8509fd1.c:161:9: error: expected declaration or statement at end of input
